# pico-mem-rust

./: .gitignore  CONFIG.md  Cargo.toml  README.md  RUST_REWRITE_PLAN.md  config.yaml.exp
plans/: future-task-integration.md  hybrid-search-implementation-plan.md
src/: api.rs  config.rs  main.rs  memory.rs  rpc.rs  schema.rs
