[package]
name = "pico-mem"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client for embedding/LLM API
reqwest = { version = "0.12", features = ["json"] }

# LanceDB for vector storage
lancedb = "0.27"

# Arrow (match lancedb version)

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Time
chrono = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async synchronization
async-channel = "2"
arrow = "57"
futures = "0.3.32"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
